refactor: Improve fragment dropping with history semantics